welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: ')' expected but ';' found.
		if ( num(i) < num(i+1) j = j+1;
                                              ^